completed project and added questions I had along the way

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
   <body>
     <!-- STEP 1: Create a <select> dropdown menu with the ID 'person-select' -->
     <!-- Add as many <option> manually with a different value and text -->
-        <select type="dropdown" id="person-select"></select>
-            <option value="mom">Mom</option>
-            <option value="friend">Friend</option>
-            <option value="child">Child</option>
+        <select
+            <input type="dropdown" id="person-select">
+            <option>Select One:</option>
+            <option value="Mom">Mom</option>
+            <option value="Friend">Friend</option>
+            <option value="Child">Child</option>
+            </select>
 
     <!-- STEP 2: Create a button with the ID 'suggest-btn' -->
     <!-- Add the text "Suggest Gifts" manually inside the button -->
